fixed description alignment on recipe details page, no longer beneath the picture

--- a/web/css/betterrecipes.css
+++ b/web/css/betterrecipes.css
@@ -1533,7 +1533,7 @@ some of this is above with #vote-box
 #recipe-detail .images {
   width:320px;
   float:left;
-  margin:0 20px 20px 0;
+  margin:0 0px 20px 0;
 }
 #recipe-detail .images p {
   width:100%;
@@ -1542,7 +1542,7 @@ some of this is above with #vote-box
 }
 #recipe-detail .recipe-meta {
   float:left;
-  width:320px;
+  width:300px;
   position: relative;
 }
 #recipe-detail .recipe-meta #activityRecipeDetailContainer { position: absolute; left: 0; top: 190px; }
